# lens

./: .gitignore  README.md  docker-compose.yml  prd.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py
backend/app/models/: __init__.py  image.py  image_analysis.py  investigation.py
backend/app/routes/: analysis.py  health.py  images.py  search.py
backend/app/schemas/: schemas.py
backend/app/services/: embeddings.py  exif.py  fts.py  hashing.py  llm.py  vision.py
frontend/: api_client.py  app.py  components.py  pyproject.toml
frontend/pages/: 1_Dashboard.py  2_Library.py  3_Search.py  4_Investigation.py  5_Duplicates.py
